--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,5 +1,5 @@
 
-<div class="container" id="sign-up-form">
+<div class="container" class="sign-up-form">
   <div class="row">
     <h1>Get in touch with like-minded people</h1>
     <h3>Create, study, accomplish goals together</h3>
