--- a/app/views/posts/branch/_categories.html.erb
+++ b/app/views/posts/branch/_categories.html.erb
@@ -8,7 +8,7 @@
       <li class="category-item">
         <%= link_to category.name, 
                     send(branch_path_name, category: category.name), 
-                    :class => ("selected-item" if params[:category] == category.name) %>
+                    class: ("selected-item" if params[:category] == category.name) %>
       </li>
     <% end %>
   </ul>
