--- a/app/assets/stylesheets/base/default.scss
+++ b/app/assets/stylesheets/base/default.scss
@@ -12,6 +12,14 @@ body {
   font-size: 1.4rem;
 }
 
+.container {
+  padding: 0;
+}
+
+.row {
+  margin: 0;
+}
+
 h1 {
   font-size: 24px;
   font-size: 2.4rem;
