fix select dropdown

--- a/app/views/posts/new/_post_form.html.erb
+++ b/app/views/posts/new/_post_form.html.erb
@@ -13,6 +13,6 @@
                   maxlength: 1000,
                   placeholder: 'Describe what you are looking for. E.g. specific interests, expertise level, etc.', 
                   class: 'form-control' %>
-  <%= f.collection_select :category_id, @categories, :id, :name, class: 'form-control' %>
+  <%= f.collection_select :category_id, @categories, :id, :name, include_blank: true, class: 'form-control' %>
   <%= f.submit "Create a post", class: 'form-control' %>
 <% end %>
